bk_ida/gccida/c1/express_from
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/express_from/src/loop.c:7567:20: error: unknown type name 'induction_1'
rtx  express_from( induction_1 *g1, induction_1 *g2) 
                   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/express_from/src/loop.c:7567:37: error: unknown type name 'induction_1'
rtx  express_from( induction_1 *g1, induction_1 *g2) 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/express_from/src/loop.c:7580:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v15; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/express_from/src/loop.c:7582:4: error: expected ';' after expression
rtx v17; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/express_from/src/loop.c:7582:5: error: use of undeclared identifier 'v17'
rtx v17; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/express_from/src/loop.c:7583:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v18; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/express_from/src/loop.c:7616:72: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
if ( ( unsigned __int16)*( _DWORD *)add_val == 78 && ( v14 = ( __int64)add_val[1], *( _WORD *)v14 == 54) ) 
                                                                       ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/express_from/src/loop.c:7620:1: error: use of undeclared identifier 'v17'
v17 = gen_rtx_CONST_INT( VOIDmode, *( _QWORD *)( v14 + 8) * v11); 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/express_from/src/loop.c:7623:7: error: use of undeclared identifier 'v17'
v19 = v17; 
      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/express_from/src/loop.c:7656:12: error: expected ';' after expression
v9 = ( rtx)v9[1]; 
           ^
           ;
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/express_from/src/obj/loop.o] Error 1
